@@ -18,3 +18,7 @@
 
 /* define to enable ActiveDirectory user schema support */
 #undef MSSFU_SCHEMA
+
+/* define to enable NDS schema: member vs uniqueMember */
+#undef NDS_SCHEMA
+
